<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/landpage"
    tools:context=".splashscreen.LandingPage">
    <!--        cng stock movement and reconciliation tracking application-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/Accent"
        android:textColor="@android:color/black"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--    android:layout_marginTop="60dp"-->


    <!--    <androidx.appcompat.widget.AppCompatImageView-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_gravity="center_horizontal"-->
    <!--        android:src="@drawable/hpgas"/>-->
    <ImageView
        android:layout_marginTop="60dp"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cng_logo"/>
<!--    android:src="@drawable/logo"-->
    <ImageView
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/assetplus"
        android:contentDescription="@string/assetlogo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@color/Primary"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="italic"
        android:padding="15dp"
               android:text="@string/app_quote"
/>
<!--    android:layout_marginBottom="20dp"-->

    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="410dp"-->
    <!--        android:src="@drawable/template"/>-->
<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/templatehor"/>-->



    <!--    <LinearLayout-->
    <!--        android:padding="30dp"-->

    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <androidx.appcompat.widget.AppCompatImageView-->
    <!--            android:layout_width="50dp"-->
    <!--            android:layout_height="50dp"-->
    <!--            android:scaleType="fitStart"-->
    <!--            android:src="@drawable/hpgas"/>-->

    <!--        <androidx.appcompat.widget.AppCompatImageView-->
    <!--            android:layout_width="50dp"-->
    <!--            android:layout_height="50dp"-->
    <!--           android:layout_marginStart="200dp"-->
    <!--           android:scaleType="fitEnd"-->
    <!--            android:src="@drawable/asset1"/>-->
    <!--    </LinearLayout>-->

    <!--    <ImageView-->

    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="20dp"-->
    <!--        android:layout_gravity="center_horizontal"-->
    <!--        android:layout_weight="1"-->
    <!--        android:scaleType="fitEnd"-->
    <!--        android:src="@drawable/assetplus" />-->




</LinearLayout>